contrast correct

--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -5,7 +5,7 @@ $third-color: #DBF4F6;
 $success-color: #8AF2C7;
 $hot-color: #ff6969;
 $light-color: white;
-$dark-color: #9c9c9c;
+$dark-color: #595959;
 $darkest-color: #444444;
 
 //fonts  
