--- a/src/sass/components/NavReader.scss
+++ b/src/sass/components/NavReader.scss
@@ -72,7 +72,7 @@
         .beta {
             padding: 0 0.5em;
             margin: 0;
-            color: $secondary-color;
+            color: #144B61;
             text-shadow: 0.4px 0.4px 1px $darkest-color;
         }
     }
